[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/environment/layers/background.png" type="Texture" id=1]
[ext_resource path="res://assets/environment/layers/middleground.png" type="Texture" id=2]
[ext_resource path="res://assets/logo.png" type="Texture" id=3]
[ext_resource path="res://scripts/menu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/ArKkos_Gmimi.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/logo.anim" type="Animation" id=6]
[ext_resource path="res://assets/fade_out.anim" type="Animation" id=7]
[ext_resource path="res://assets/fade_in.anim" type="Animation" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 5
outline_color = Color( 0.27451, 0.152941, 0.0156863, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Gradient" id=9]
interpolation_mode = 1
offsets = PoolRealArray( 0, 0.70283 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=10]
flags = 0
gradient = SubResource( 9 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 454, -205 ) ]
}

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1375.0
margin_top = -824.0
margin_right = 1379.0
margin_bottom = 790.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="Middleground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -186.0
margin_top = -205.0
margin_right = 186.0
margin_bottom = -5.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="BtnComecar" type="Button" parent="."]
anchor_left = 0.405
anchor_top = 0.764
anchor_right = 0.595
anchor_bottom = 0.851
margin_left = 0.599976
margin_top = -17.08
margin_right = -0.600037
margin_bottom = -16.72
custom_colors/font_color_focus = Color( 1, 0.72549, 0, 1 )
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.823529, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Come√ßar"

[node name="BtnSair" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -106.0
margin_right = 121.0
margin_bottom = -43.0
custom_colors/font_color_focus = Color( 1, 0.72549, 0, 1 )
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_colors/font_color_hover = Color( 0.972549, 0.823529, 0.439216, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Sair"

[node name="Fade" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 32, 32 )
texture = SubResource( 10 )
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/fade_in = ExtResource( 8 )
anims/fade_out = ExtResource( 7 )
anims/logo = ExtResource( 6 )

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="BtnComecar" to="." method="_on_BtnComecar_pressed"]
[connection signal="pressed" from="BtnSair" to="." method="_on_BtnSair_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
